# zotero-mcp

./: CONCLUSION.md  CONTEXT.md  CONTEXT_LEX_OS.md  INSTALL.md  INSTALL_LEX_OS.md  MCP_SERVER_SETUP.md  QWEN.md  QWEN_LEX_OS.md  README.md  README_LEX_OS.md  SUMMARY.md  SUMMARY_LEX_OS.md  paths.yaml  pyproject.toml
.ai/: GOVERNANCE.md  README.md  identity.md  rules.md
.ai/agents/: zotero_ingest.agent.md
.ai/catalog/: pattern_catalog.md
.ai/consolidation/: output_consolidation_system.md
.ai/flows/: djej_to_zotero.flow.md
.ai/integration/: mcp_servers.md  zotero_mcp_pending_installation.md
.ai/prompts/: mcp_usage_examples.md  orquestrador_mcp.prompt.md
.ai/teams/: mcp_usage.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ai-validation.yml
.qwen/: PROJECT_SUMMARY.md
Agentes e MCPs/: Descrição técnica consolidada do fluxo.md  MCPs.md  Pensando no fluxo após a obtenção do precedente.md  explique em que situações e como posso usar os mc....md
config/: paths.yaml
docs/governance/: AGENT_PROMPT.md  identity.md
docs/governance/agents/: mcp_integration.md
docs/governance/integration/: progressive_integration.md
docs/governance/orchestrators/: fabric_aware_orchestrator.md
docs/governance/patterns/: bibtex_decisao.pattern.md
docs/governance/schemas/: document_classification.schema.json
docs/governance/teams/: team_abstraction.md
docs/legacy/: INSTALL.md  MCP_SERVER_SETUP.md
docs/legacy/Agentes e MCPs/: Descrição técnica consolidada do fluxo.md  MCPs.md  (+1 more)
src/: lex_os_server.py  parallel_teams_system.py  validation_system.py
